--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,12 @@
-body{
-    margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-}
+@import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
 
-ul{
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-}
+@import "./global/header.css";
 
-a{
-    text-decoration: none;
-}
+/* Utilidades */
+@import "./utilidades/componentes.css";
 
-.header-bg {
-    background-color: #000;
-}
 
-.header{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    max-width: 1160px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.header-menu{
-    display: flex;
-    gap: 40px;
-    flex-wrap: wrap;
-}
-
-.header-menu a{
-    color: #fff;
-    padding: 16px 0px;
-    display: inline-block;
-    font-size: 1.125rem;
-    position: relative;
-}
-
-.header-menu a:after{
-    content: "";
-    display: block;
-    height: 2px;
-    width: 0px;
-    background-color: #fff;
-    margin-top: 4px;
-    transition: 0.3s;
-    position: absolute;
-}
-
-.header-menu a:hover:after{
-    width: 100%;
-}
-
-@media (max-width: 800px){
-    .header-menu{
-        gap: 20px;
-    }
-    .header-menu a{
-        background-color: #111;
-        padding: 12px 16px;
-        border-radius: 4px;
-    }
-
-    .header-menu a:hover{
-        background-color: #2e2e2e;
-    }
-
-    .header-menu a:after{
-        display: none;
-    }
-}
-
-@media (max-width: 600px){
-    .header-menu{
-        gap: 12px;
-    }
-
-    .header-menu a{
-        padding: 8px 12px;
-        font-size: 0.75rem;
-    }
-}
+/* Home */
+@import "./home/introducao.css";
