--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 /* Utilidades */
 @import "./utilidades/componentes.css";
 
-
 /* Home */
 @import "./home/introducao.css";
+
+/* Bicicletas */
+@import "bicicletas/bicicletas-lista.css";
