--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -25,6 +25,26 @@
     background: linear-gradient(#ffb60d, #e59317);
 }
 
+.link{
+    display: inline-block;
+    color: var(--cor-p1);
+    font: 500 1.5rem/1.5 "Poppins", sans-serif;
+    text-transform: uppercase;
+}
+
+.link::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: currentColor;
+}
+
+.link:hover{
+    color: var(--cor-0);
+    transition: 0.3s;
+}
+
 @media (max-width: 600px){
     .botao{
         padding: 12px 16px;
