--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -19,10 +19,20 @@
     line-height: 1.33;
     font-family: 'Poppins';
     font-weight: 600;
+    max-width: max-content;
 }
 
 .botao:hover{
     background: linear-gradient(#ffb60d, #e59317);
+}
+
+.botao.secundario {
+    background: var(--cor-10);
+    color: var(--cor-2);
+}
+
+.botao.secundario:hover {
+    background: var(--cor-9);
 }
 
 .link{
