--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -15,12 +15,12 @@
 
 .contato-dados{
     border-radius: 5px 0 0 5px;
-    background-color: var(--cor-12);
+    background-color: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat bottom 20px left 20px;
 }
 
 .contato-formulario{
     border-radius: 0 5px 5px 0;
-    background-color: var(--cor-0);
+    background: var(--cor-0) url("../../img/dec/bottom-right.svg") no-repeat bottom 20px right 20px;
 }
 
 .contato-dados h2{
@@ -77,6 +77,7 @@
     }
     .contato-dados{
         border-radius: 5px 5px 0 0;
+        background: var(--cor-12);
     }
     .contato-formulario{
         border-radius: 0 0 5px 5px;
