html-css-complet

--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -15,7 +15,7 @@
 
 .contato-dados{
     border-radius: 5px 0 0 5px;
-    background-color: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat bottom 20px left 20px;
+    background: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat bottom 20px left 20px;
 }
 
 .contato-formulario{
